Thu Jan 29 18:03:23 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/iconv.c:
	- more names normalization

Wed Jan 28 21:37:43 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am include/dblib.h include/sybdb.h:
	* include/tds.h src/apps/freebcp.c src/dblib/dblib.c:
	* src/dblib/dbutil.c src/dblib/unittests/t0017.c:
	- make dblib.h a private header
	- sybdb.h do not depend anymore on tds.h

Wed Jan 28 12:27:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/pool/stream.c src/pool/user.c:
	- applied Brians patch on pool server

Wed Jan 28 12:06:58 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsiconv.h src/dblib/bcp.c:
	* src/server/login.c src/tds/iconv.c src/tds/login.c:
	* src/tds/query.c src/tds/read.c src/tds/token.c:
	* src/tds/write.c src/tds/unittests/utf8_2.c:
	- continue normalization (TDSICONVINFO -> TDSICONV)

Tue Jan 27 22:54:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h include/dblib.h include/tds.h:
	* src/apps/tsql.c src/ctlib/ct.c src/ctlib/ctutil.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/dbutil.c:
	* src/dblib/rpc.c src/odbc/connectparams.c src/odbc/connectparams.h:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/pool/member.c:
	* src/pool/stream.c src/server/server.c src/tds/config.c:
	* src/tds/data.c src/tds/login.c src/tds/mem.c:
	* src/tds/query.c src/tds/read.c src/tds/token.c:
	* src/tds/unittests/common.c src/tds/unittests/dataread.c:
	* src/tds/unittests/dynamic1.c src/tds/unittests/flags.c:
	* src/tds/unittests/t0003.c src/tds/unittests/t0006.c:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_2.c:
	- normalize some libTDS names
	- fix for Deacon problem (I hope)

Mon Jan 26 10:36:35 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/write.c handle large UTF-8 inputs to tds_put_string()
